--- a/page/components/ContactForm/formspree.module.scss
+++ b/page/components/ContactForm/formspree.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   height: 100vh;
   align-items: flex-start;
-  width: 98%;
+  width: 70vw;
   margin: 25px 1%;
   padding-top: 80px;
 
