--- a/page/src/styles/globals.css
+++ b/page/src/styles/globals.css
@@ -30,5 +30,9 @@ li {
   list-style-type:none;
 }
 
+.yarl__button yarl__navigation_next,
+.yarl__button yarl__navigation_prev{
+  border: 1px solid #000;
+}
 
 
