--- a/page/components/Menu/LangButton/LangButton.module.scss
+++ b/page/components/Menu/LangButton/LangButton.module.scss
@@ -3,11 +3,11 @@
   section.model {
     height: 50px;
     top: 15px;
-    left: 15px;
+    left: 75px;
     float: left;
     width: 50px;
     position: fixed;
-    z-index: 100;
+    z-index: 0;
 
     .menu {
       height: 50px;
@@ -20,77 +20,18 @@
       transition: 0.3s;
       cursor: pointer;
       background-color: #ffffff99;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-      &.close{
-        border: 2.5px solid transparent;
+
+      p {
+        font-size: 1.2em;
       }
     }
     
-    .bar {
-      height: 3px;
-      width: 35px;
-      display: block;
-      margin: 7px auto;
-      position: relative;
-      background-color: #000;
-      border-radius: 40%;
-      transition: 0.4s;
-    }
+    
 
-    & {
-      background-color: transparent;
-    }
 
-    & .menu {
-      overflow: hidden;
-    }
-
-    & .menu:after {
-      content: '';
-      width: 90%;
-      height: 90%;
-      left: 0;
-      top: 0;
-      position: absolute;
-      border: 2.5px solid transparent;
-      border-radius: 50%;
-    }
-
-    & .menu.close:after {
-      animation: circle-creation 1s forwards;
-    }
-
-    & .menu.close .bar:nth-of-type(1) {
-      transform: translateY(9px) rotate(45deg);
-    }
-
-    & .menu.close .bar:nth-of-type(2) {
-      transform: translateX(50px);
-      transition: 0.6s;
-    }
-
-    & .menu.close .bar:nth-of-type(3) {
-      transform: translateY(-11px) rotate(-45deg);
-    }
-
-    @keyframes circle-creation {
-      0% {
-        border-color: transparent;
-        transform: rotate(0deg);
-      }
-      25% {
-        border-color: transparent #000 transparent transparent;
-        transform: rotate(-35deg);
-      }
-      50% {
-        border-color: transparent #000  #000 transparent;
-      }
-      75% {
-        border-color: transparent #000 #000 #000;
-      }
-      100% {
-        border-color: #000;
-        transform: rotate(-300deg);
-      }
-    }
+   
   }
